--- a/Grief.csproj
+++ b/Grief.csproj
@@ -15,6 +15,12 @@
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.*" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Classes\DesignPatterns\Command\Commands\" />
+    <Folder Include="Classes\DesignPatterns\Builder\" />
+    <Folder Include="Classes\DesignPatterns\Composite\ObjectComponents\" />
+    <Folder Include="Classes\DesignPatterns\Factories\ObjectFactories\" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
