--- a/Grief.csproj
+++ b/Grief.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -16,6 +16,9 @@
 		<PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="4.1.0" />
 		<PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.*" />
 		<PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Content\MainCharacter\Fall\" />
 	</ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
