--- a/Grief.csproj
+++ b/Grief.csproj
@@ -19,6 +19,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Content\MainCharacter\Fall\" />
+	  <Folder Include="Content\UI\" />
 	</ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
