--- a/Grief.csproj
+++ b/Grief.csproj
@@ -11,15 +11,20 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Content\UI\**" />
+    <EmbeddedResource Remove="Content\UI\**" />
+    <None Remove="Content\UI\**" />
+  </ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="MonoGame.Extended" Version="4.1.0" />
 		<PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="4.1.0" />
 		<PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.*" />
 		<PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Content\MainCharacter\Fall\" />
-	  <Folder Include="Content\UI\" />
 	</ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
